Archive2/a0/e1a78e17e22649/output
main.cpp:2:17: error: using directive refers to implicitly-defined namespace 'std' [-Werror]
using namespace std;
                ^
main.cpp:12:9: error: use of undeclared identifier 'cout'
        cout<<"Enter value of first coordinate";
        ^
main.cpp:13:9: error: use of undeclared identifier 'cin'; did you mean 'sin'?
        cin >> array1[i];
        ^~~
        sin
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:66:13: note: 'sin' declared here
__MATHCALL (sin,, (_Mdouble_ __x));
            ^
/usr/include/math.h:55:25: note: expanded from macro '__MATHCALL'
  __MATHDECL (_Mdouble_,function,suffix, args)
                        ^
/usr/include/math.h:57:22: note: expanded from macro '__MATHDECL'
  __MATHDECL_1(type, function,suffix, args); \
                     ^
/usr/include/math.h:65:31: note: expanded from macro '__MATHDECL_1'
  extern type __MATH_PRECNAME(function,suffix) args __THROW
                              ^
/usr/include/math.h:68:42: note: expanded from macro '__MATH_PRECNAME'
#define __MATH_PRECNAME(name,r) __CONCAT(name,r)
                                         ^
/usr/include/x86_64-linux-gnu/sys/cdefs.h:94:23: note: expanded from macro '__CONCAT'
#define __CONCAT(x,y)   x ## y
                        ^
main.cpp:13:16: error: use of undeclared identifier 'array1'
        cin >> array1[i];
               ^
main.cpp:14:9: error: use of undeclared identifier 'cout'
        cout<<"Enter value of second coordinate";
        ^
main.cpp:15:9: error: use of undeclared identifier 'cin'; did you mean 'sin'?
        cin >> array2[i];
        ^~~
        sin
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:66:13: note: 'sin' declared here
__MATHCALL (sin,, (_Mdouble_ __x));
            ^
/usr/include/math.h:55:25: note: expanded from macro '__MATHCALL'
  __MATHDECL (_Mdouble_,function,suffix, args)
                        ^
/usr/include/math.h:57:22: note: expanded from macro '__MATHDECL'
  __MATHDECL_1(type, function,suffix, args); \
                     ^
/usr/include/math.h:65:31: note: expanded from macro '__MATHDECL_1'
  extern type __MATH_PRECNAME(function,suffix) args __THROW
                              ^
/usr/include/math.h:68:42: note: expanded from macro '__MATH_PRECNAME'
#define __MATH_PRECNAME(name,r) __CONCAT(name,r)
                                         ^
/usr/include/x86_64-linux-gnu/sys/cdefs.h:94:23: note: expanded from macro '__CONCAT'
#define __CONCAT(x,y)   x ## y
                        ^
main.cpp:15:16: error: use of undeclared identifier 'array2'
        cin >> array2[i];
               ^
main.cpp:17:26: error: use of undeclared identifier 'array1'
        Sum = Sum + pow((array1[i]-array2[i]),2.0);
                         ^
main.cpp:17:36: error: use of undeclared identifier 'array2'
        Sum = Sum + pow((array1[i]-array2[i]),2.0);
                                   ^
main.cpp:20:9: error: use of undeclared identifier 'cout'
        cout << "DISTANCE: " << distance;
        ^
10 errors generated.
